[package]
name = "tensorknife"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
color-eyre = "0.6.2"
log = "0.4.19"
pretty_env_logger = "0.5.0"
regex = "1.8.3"
safetensors = "0.3.1"
structopt = "0.3.26"
zip = "0.6.6"
